try to fix spoiler hover on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,4 +339,10 @@ p.sitelen-pona {
 
 .spoiler {
   background-color: var(--color-fg);
+  padding: 2px 4px;
+  margin: -2px -4px;
+}
+
+.spoiler:hover {
+  color: var(--color-bg)
 }
